how to start in reverse part 3

--- a/pages/how_to_start_in_reverse.html
+++ b/pages/how_to_start_in_reverse.html
@@ -89,13 +89,130 @@
                 В тот же день, мне позвонил рекрутер и чтож, теперь у меня было 4 дня выучить реверс с нуля, что конечно
                 не возможно. Но по крайней мере я круто поработал за 4 дня и получил с разных статей первое
                 представление, что же такое реверс.</p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
-            <p> </p>
+            <p> И вот у меня собес, первый раз я ассемблер увидел ровно 2 часа до собеса, но уже успел разобраться в
+                простых операциях.
+                Разумеется Вишняков был в шоке с моих слабых навыков, но дал мне хорошие советы, учить ассемблер, ОС,
+                хотя бы пробовать реверсить, а самое главное интересоваться этим. И в конце онлайн собеса, я попросил
+                разрешение прийти к нему ещё раз позже, он согласился.
+                Тогда я решил начать изучать реверс.
+                Мой выбор пал на книгу "Вскрытие покажет. Практический анализ вредоносного ПО". Почему именно она,
+                просто эта книга мелкала почти в каждой подборке, посвещенной материалу по реверсу + на то время я знал
+                только одно применение реверсу в будущем - это анализ вредоносных программ.</p>
+            <p> Но учить с нуля одному, даже не зная кому обратиться с кем порешать, где смотреть хоть какие-то разборы,
+                это мягко говоря очень тяжело.
+                Я пытался читать книгу перед сном/ночью но все было четно, я чувствовал, что ничего не понимаю, и так я
+                бестолку промаялся 2 месяца ноябрь и декабрь, а толк был почти нулевой.
+                Можно было бы позвать кого-то учить с тобой, но у каждого свои дела, да и вообще как уговорить кого-то
+                на что-то, если сам не знаешь возможно ли это вообще. Но тем не менее, я не терял веры и продолжал
+                биться, надеюсь вы будете также.</p>
+            <p> Следующий поворотный момент был в январе, новогодние каникулы, куча времени перед сессией, да и между
+                экзами, думаю каждому нужно стараться использовать такое время помаксимум, как и летнее время, если оно
+                у вас свободно. В ту зиму это впервые попытался сделать и я. Я решил дать себе столько времени сколько
+                мне нужно, чтобы осилить книгу и вновь сел за неё. И на удивление на этот раз я начинал её уже не с
+                нуля, и такое ощущение, что у меня к этому времени уже был какой-то навык, и мне было немного легче.
+                И я смог прочитать книгу полностью за один месяц, но на самом деле я опять не понимал сложные темы главы
+                в книге. Но я правда мучился с windbg 2 дня без остановки, чтобы удалось выполнить лабу с руткитами. Но
+                чтение книги это было долго и тяжело, книга старая и я даже не знал о существовании кнопки f5, которая
+                преобразует ассемблерный код в си, понимаете я учился реверсу с нуля смотря на огромные листинги
+                ассемблера, сущий ад.(но один мой добрый друг мне помог, но об этом позже)</p>
+            <p> И тогда я почуствовал, что довольно сильно продвинулся, что я что-то смог и теперь точно довольно не
+                плохо знаю ассемблер, есть опыт реверса простых программ, но было одно но, я действительно смог
+                проделать все повторяя лабораторные за книгой (но потом меня оссенило, я совершенно ничего не могу
+                сделать с нуля, сам , без посторонней помощи)</p>
+            <p> И тогда я вновь решил пойти к старому товарищу Вишнякову на новый собес, написал ему на почту, он
+                согласился ещё раз пообщаться, я рассказал ему, что прочел только одну книгу. Но затем он решил
+                проверить насколько хорошо я усвоил прочитанный материал и спросил меня по самым сложным темам книги, и
+                я конечно ничего не смог ответить, ведь это все было ново для меня, и я не ожидал, что от меня требуются
+                настолько хорошие навыки. Следующим ударом для меня были его слова, что на стажировке меня никто не
+                будет обучать и весь рост будет зависеть от меня. И следующий этап, чтобы попасть к ним, он предложит
+                мне отреверсить 5-6 программ самому с нуля. Это немного шокировало меня, я был расстроен, только тогда
+                меня осенило, что я ничего не могу сделать сам, и что вся моя жизнь будет зависеть только от меня
+                самого, в то время это был тяжелый удар для меня.
+                Наступило довольно тяжелое время, я совершенно не знал, что делать, я не мог понять темы в книге
+                достаточно хорошо, мне не к кому было обратиться, если я не могу попасть в позитив, то куда мне идти на
+                стажировку, в то время ещё вуз давил, чтобы мы нашли себе место практики, стоит ли мне продолжать
+                реверс, есть ли у меня вообще в этом будущее. Эти вопросы сильно мучили меня, и я не мог заниматься
+                из-за неопределенности, страха за себя, своё будущее.</p>
+            <p>И что же делать дальше? </p>
+            <p>Конечно я не мог сдаться, ведь на кону моя жизнь, моё будущее. Я решил постараться некоторое время не
+                зацикливать на реверсе, и попробовать посмотреть другие направления, посмотреть куда пробуют попасть мои
+                друзья, мои одногруппники, узнать чем они хотят заниматься. В это время я начал понимать, что реверс
+                довольно узкое направление, а ИБ широка сама по себе. И ещё, что
+                Тогда приходит hero, Ахмад мне в очередной раз советует просмотреть сезон реверса от spbctf. </p>
+            <p>В то время я стал задумываться о ctf. Тогда я решаюсь немного понизить планку и просто посмотреть, чем
+                они занимаются, какие таски решают, прорешав первые таски, я получил первую радость, что у меня это
+                получается, я решился просмотреть каждый видос и прорешать немного заданий после каждого видео. И я
+                сделал это, и это было круто, я узнал много нового.
+                И в то время я решаюсь вновь сесть за книгу, но уже со своим опытом, опытом, что нужно стараться делать
+                все самому, с нуля, а только потом смотреть, что у тебя не вышло + новые фичи и понимание которое я
+                получил от сезона реверса spbctf + опять было легче читать книгу не с нуля, а уже с третьей попытки.
+            </p>
+            <p> И я сидел над книгой иногда по 12 часов в сутки, дотошно всматриваясь в ассемблерный код и
+                декомпилированный. Разбирая каждую программу, дотошно смотря каждое её действие, стараясь понять, что же
+                оно делает. Гугля каждую новую api функцию, и ведя список своих пометок - врайтап по каждой программе.
+                Да это было жестко, повторяя одни и те же действия каждый раз, я начинал чувствовать, что уверенности
+                мне становится все больше и вновь смог пройти эту книгу почти до конца.
+                Почему почти, потому что для меня начался опять новый этап жизни, протеворечивый, но полезный для меня.
+            </p>
+            <p> Я искал практику, потому что не успел с Онлантой, куда предлагал вуз, точнее я успел, но мне отказали,
+                так как написал поздно, я опаздал с ангарой(как мне тогда казалось). Жизнь опять пошла наперекосяк,
+                практики нет, что же делать, как быть. Почему не подал опять в позитив - не был уверен в себе, так как
+                там высокий уровень + я написал Ксении, чтобы она спросила, чтобы я у них прошел хотя бы практику, она
+                согласилась, но так и это не сделала, я больше не стал ей писать. Я решил посмотреть, какие вообще
+                компании занимаются реверсом, и для меня стало шоком понимание, что в России их почти нет и это самые
+                большие компании, в которые просто так не попадешь - это Kaspersky dr web и positive, но может быть
+                group ib, и смотря вакансии я видел, что нужен большой опыт.</p>
+            <p> Тогда я решил поискать все хоть мелкие хоть большие компании, которые занимаются вирусной аналитикой, и
+                я собрал их 15-20 штук (позже добавил и те в которых нет реверсеров). Время поиска действительно
+                поджимало - 15 апреля, и я решил подать резюме в каждое из этих направлений. И положительный ответ
+                пришёл только в одном. А забыл один ньюанс, до этого я поприколу решил написать ангаре, типо я проебался
+                извините, можно все таки попробовать к вам, благо нам присылали на почту контакты рекрутера, и на моё
+                счастье, она сказала, что будет вторая волна отбора. И тогда я решил, что навсякий случай поучатсвую
+                там, хоть вроде и нашел AV soft, вдруг каким-то чудом там не сложится(как же я был прав). Ну и заодно я
+                решил предложить это место и друзьям, и так оказалось, что почти весь состав CTF Burger оказался там, ну
+                и круто. </p>
+            <p> Вот и начался следующий этап моей жизни - AV soft, компания которая разрабатывает песочницу,
+                антивирусную лабораторию, в которой требуются разные сотрудники, как вирусные аналитики, реверсеры -
+                такое представление я имел о компании до выхода на стажировку. Условия были как мне кажется прекрасными
+                для меня, свободный график, главное не менее 20 часов в неделю, но месяц бесплатной стажировки, с
+                последующим рассмотрением оформления в штат. Вполне приемлемо.</p>
+            <p> И вот я выхожу на стажировку, в представлении, где огромная компания, много реверсеров, всегда есть к
+                кому обратиться, тебе дают задачи, которые развивают тебя
+                Что получилось на деле, компания состоит из 20 человек, большая часть из которых обычные студенты, из
+                которых всего 3-4 аналитика, среди которых был и я.</p>
+            <p> Потом случился наверно один из важных поворотов, который повлиял на мою судьбу, это то, что когда
+                пришел, сразу ушел главный аналитик, который работал там аж 4 года, а я застал его только на 3 дня, я не
+                вовремя пришел или роковая случайность.
+                Я вообще не понимал, что такое компания, и опять ушел тот кто мог мне хоть что-то объяснить, студенты
+                работающие со мной сами плохо разбирались в работе компании, в задачах.
+                Первое время мне мешало то, что я почти необщался, но в моей ситуации это не так уж удивительно, но тем
+                не менее я мог проявить больше инициативы</p>
+            <p> Но опять же последующее время было тяжелым для меня из моей жизни исчезло 30 часов времени в неделю с
+                учетом работы и пути, постоянно я чувствовал усталость, не успел по учебе, в не рабочее время не
+                удавалось думать о работе, к тому же я банально не привык работать, не привык быстро изучать что-то,
+                всегда делал это только в своё удовольствие, да и тяжело было быть в коллективе с не привычки. Но тем не
+                менее в конце я стал больше общаться, больше понимать, что с меня требуется, но все равно не доконца.
+                Я не смог достойно справится со всеми этими факторами, меня вызвали к себе и сказали, что они не будут
+                брать меня в штат, поскольку их не устраивают мои софт скилы, с чем я был согласен, но в последнее время
+                стал лучше в этом и хард скилы, про это мне было противно слушать, потому что с хард скилами, я думаю у
+                них проблемы у всех в этой компании, а я так и не смог проявить себя.</p>
+            <p> Тем не менее это был большой опыт для меня, но опять время сомнений, что же мне делать, если меня не
+                берёт даже такая компания куда идти. Ещё я стал понимать, что не правильно и очень тяжело справляться со
+                всем в одиночку, стоит ли вообще продолжать реверс, если там у меня ни кого не будет и нафиг я там
+                никому не сдался, почему я раньше не понимал этого, или попробовать пойти вместе с парнями(мужиками) в
+                ангару и постараться поддержать друг друга. Этими вопросами я задаюсь на момент написания этой истории.
+            </p>
+            <p> Далее был ctf От MPEI, где я смог решить все задания на реверс не имея вообще практики ctf и взяв
+                перерыв от реверса. Но стоит сказать конечно задания были совсем легкие, но тем не менее это уже что-то.
+            </p>
+            <p> И вот теперь я решаюсь нагнать упущенное время, мы заканчиваем 3й курс, следующий курс будет полезным
+                для нас, кажется в это время уже поздно начинать играть в ctf, но это все зависит от нашего выбора, я
+                вижу в глазах ребят стремление и поддержку друг друга, и чувствую это в себе. Все только начинается, а я
+                сделаю все что будет в моих силах, чтобы помочь себе и остальным.</p>
+            <p>Надеюсь, что мы расширимся на весь поток и даже между курсами, и оставим в наследие этот сайт.
+                Возможно в будущем я сильно поменяю свое мнению, но в данный момент оно такое. </p>
+            <p>И опять я вынужден задавать себе вопросы, что дальше? И вновь стараться справляться с ними.
+                Дальше мы продолжаем ctf, продолжаем развивать себя, сообщество и не сдаемся. </p>
             <p> </p>
         </ol>
     </main>
