how to start in reverse part 4

--- a/pages/how_to_start_in_reverse.html
+++ b/pages/how_to_start_in_reverse.html
@@ -23,7 +23,7 @@
             <mark style="background: #FFB86CA6;">Огромное спасибо Вите, что вдохновил меня написать эту страницу.</mark>
         </p>
         <p>
-            Как стартануть в реверсе?
+            <mark style="background: #FFB86CA6;">Как стартануть в реверсе?</mark>
         </p>
         <p>
             Я бы посоветовал просто разобраться с этой книгой, как лучший старт, если бы не одно но, я убил на эту книгу
@@ -71,7 +71,7 @@
                 <p>Думаю в других направлениях ctf тоже нужно смотреть сезоны от forkbomb <a
                         href="https://forkbomb.ru/tasks">https://forkbomb.ru/tasks</a></p>
             </li>
-            <p>Как я сам стартовал в реверсе, что пробовал, чем жил? </p>
+            <p><mark style="background: #FFB86CA6;">Как я сам стартовал в реверсе, что пробовал, чем жил?</mark> </p>
             <p>(хотел просто расписать как стартанул в реверсе, но этот рассказ сильно пересекся с моей жизнью) </p>
             <p>Довольно тяжелая история
                 Начал я с начала третьего курса(не поздно ли) и просто постарался выбрать приоритетное направление в ctf
