how to start in reverse part 5

--- a/pages/how_to_start_in_reverse.html
+++ b/pages/how_to_start_in_reverse.html
@@ -72,6 +72,7 @@
                         href="https://forkbomb.ru/tasks">https://forkbomb.ru/tasks</a></p>
             </li>
             <p><mark style="background: #FFB86CA6;">Как я сам стартовал в реверсе, что пробовал, чем жил?</mark> </p>
+            <p>"У самурая нет цели, есть только путь" В. Волков (still 0 из 7 лаб по проге)</p>
             <p>(хотел просто расписать как стартанул в реверсе, но этот рассказ сильно пересекся с моей жизнью) </p>
             <p>Довольно тяжелая история
                 Начал я с начала третьего курса(не поздно ли) и просто постарался выбрать приоритетное направление в ctf
