How to find ctf First day in angara

--- a/pages/Burger_komanda_history.html
+++ b/pages/Burger_komanda_history.html
@@ -29,6 +29,14 @@
     <p>Конечно мы могли решить намного лучше и обогнать unicorn-у, но это уже нам на будущее.</p>
     <p>И как итог почетное 73 место, спасибо Ахмаду за решенное крутое задание.</p>
     <img src="../assets/images/vkactf2023-ranking.jpg" alt="описание_изображения">
+    <p>08.06.2023</p>
+    <p>Команда Burger CTF в не полном составе начинает стажировку в компании angara</p>
+    <p>А это значит, что история Burger будет связана с ангарой, возможно на 3 месяца не оплачиваемой стажировке,
+      возможно кому-то удастся пройти отбор на оплачиваемую стажировку - которая будет длится пол года, а уже возможно
+      кто-то попадет понастоящему в штат компании </p>
+    <img src="../assets/images/Burger_and_Angara.jpg" alt="описание_изображения">
+    <p>Ну ладно, ещё немного фоток ctfеров</p>
+    <img src="../assets/images/Nikita_and_Vlad.jpg" alt="описание_изображения">
   </main>
 </body>
 
