--- a/pages/company_in_cybersec.html
+++ b/pages/company_in_cybersec.html
@@ -34,12 +34,7 @@
       <li>Trend Micro</li>
       <li>Перспективный мониторинг</li>
       <li>Код безопасности</li>
-      <li>AV Soft - небольшая компания (20-25 сотрудников, из которых только 2-3 отвечают за вирусную аналитику).
-        Условие работы - не менее 20 часов в неделю, можно выбирать любое удобное время, даже в выходные. Штат компании
-        в основном состоит из студентов. Руководство компании не очень хорошо разбирается в ИБ, поэтому развитие
-        основывается на самообразовании. Каждую неделю формируется список задач, которые нужно выполнить, даже если
-        приходится изобретать велосипед. Компания может предоставить первый опыт работы и возможность попробовать себя в
-        коллективе. Хороший опыт для студентов.</li>
+      <li>AV Soft</li>
       <li>Security Vision</li>
       <li>Xello</li>
       <li>Аринтег</li>
@@ -49,6 +44,53 @@
       <li>Ланит</li>
       <li>Информзащита - проводят стажировку в июне</li>
     </ul>
+    <p>Об Ангаре:</p>
+    <p>Что сказать о компании, кажется компания действительно растет и развивается, не сказать, что она так сильна и не
+      сказать, что и не на уровне, все-таки имеет штат более 300 человек, которые трудятся по всей стране.</p>
+    <p>Мы попадали туда на 3 месяца летней стажиовки, нужно было встречаться всего лишь раз в неделю и не всегда
+      оффлайн, нам пообещали, что мы сможем прокачать свои навыки в линуксе, сетях и вроде как инфраструктуре.</p>
+    <p>На время этих записей мы только сегодня сходили на первый день стажировки, первый день был только
+      ознакомительный, нас там 13 человек.</p>
+    <p>Неоплачиваемая практика 3 месяца, далее отбор на оплачиваемую практику - которая длится пол года, а дальше
+      попадание в штат.</p>
+    <p>Вот такие записи из рассказов о профессии и компании я сделал:</p>
+    <p>Отдел форензики - книга форензика компьютерная Криминалистика, Отдел Пентеста, Отдел разработки, Отдел SOC,
+      Инженерный отдел, Отдел консалтинга.</p>
+    <p>Ситсиемнве интеграторы - обслуживание информационных систем.</p>
+    <p>Системный интегратор - Дистрибьютор - вендор.</p>
+    <p>Почему нужны системные интеграторы:</p>
+    <ul>
+      <li>Производителю одного продукта не выгодно внедрять один продукт.</li>
+      <li>Трудно им софт на тысячи станций.</li>
+      <li>Разрабатывают систему из нескольких продуктов вендоров под интересы возможности организации и предлагают их
+        внедрить организации.</li>
+      <li>Смотрят откуда были утечки и предлагают средства чтобы это не повторилось далее контракт и внедрение.</li>
+    </ul>
+    <p>Далее заказчик, если делает, может попросить администрировать, настраивать продукты - аутсорсинг - сопровождение
+      продуктов безопасности.</p>
+    <p>Сложно когда продукт ломается - нужен скил чтобы его починить - навыки ИТ, компания в ИТ.</p>
+    <p>Есть консалтинг - регуляторы ФСБ фстэк, чтобы заказчик разобрался в требованиях этих регуляторов к нему.</p>
+    <p>Есть Пентест - проверка защищенности организации, дают советы.</p>
+    <p>Есть SOC - мониторят и реагируют на инциденты, в каждых продуктах есть логирование, дают рекомендации как
+      отреагировать на эти события.</p>
+    <p>ИТ постоянно меняется.</p>
+    <p>Куча партнёров, нужно уметь их всех настраивать.</p>
+    <p>Безопасность разработки в компании - devops, теперь просто настраивать безопасность не актуально.</p>
+    <p>Получаем опыт как защищать различный бизнес.</p>
+    <p>Важна быстрая обучаемость, готовность к нестабильной жизни.</p>
+    <p>Продукт Mss managed security service - трафик через сайт или др проходит через них и до клиента доходит только
+      очищенный безопасный трафик.</p>
+    <p>Внедряют и железо и софт.</p>
+    <p>Нужны качества - уметь найти информацию и быстро её изучить.</p>
+
+    <p>Об AV soft:</p>
+    <p>небольшая компания (20-25 сотрудников, из которых только 2-3 отвечают за вирусную аналитику).
+      Условие работы - не менее 20 часов в неделю, можно выбирать любое удобное время, даже в выходные. Штат компании
+      в основном состоит из студентов. Руководство компании не очень хорошо разбирается в ИБ, поэтому развитие
+      основывается на самообразовании. Каждую неделю формируется список задач, которые нужно выполнить, даже если
+      приходится изобретать велосипед. Компания может предоставить первый опыт работы и возможность попробовать себя в
+      коллективе. Хороший опыт для студентов.</p>
+
     <p><mark>За рубежом:</mark></p>
     <ul>
       <li>Trend Micro - японская компания, имеющая представительство в России</li>
