--- a/pages/our_plans.html
+++ b/pages/our_plans.html
@@ -37,6 +37,9 @@
             В планах стартовать в стажировке Angara, и выкладываться там тоже
         </p>
         <p>
+            Расширяемся, почему не попробовать замахнуться на HTB?
+        </p>
+        <p>
             Идем дальше
         </p>
     </main>
