--- a/pages/company_in_cybersec.html
+++ b/pages/company_in_cybersec.html
@@ -44,7 +44,7 @@
       <li>Ланит</li>
       <li>Информзащита - проводят стажировку в июне</li>
     </ul>
-    <p>Об Ангаре:</p>
+    <p><mark>Об Ангаре:</mark></p>
     <p>Что сказать о компании, кажется компания действительно растет и развивается, не сказать, что она так сильна и не
       сказать, что и не на уровне, все-таки имеет штат более 300 человек, которые трудятся по всей стране.</p>
     <p>Мы попадали туда на 3 месяца летней стажиовки, нужно было встречаться всего лишь раз в неделю и не всегда
@@ -83,7 +83,7 @@
     <p>Внедряют и железо и софт.</p>
     <p>Нужны качества - уметь найти информацию и быстро её изучить.</p>
 
-    <p>Об AV soft:</p>
+    <p><mark>Об AV soft:</mark></p>
     <p>небольшая компания (20-25 сотрудников, из которых только 2-3 отвечают за вирусную аналитику).
       Условие работы - не менее 20 часов в неделю, можно выбирать любое удобное время, даже в выходные. Штат компании
       в основном состоит из студентов. Руководство компании не очень хорошо разбирается в ИБ, поэтому развитие
