--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <a href="#">▶ Менью</a>
         <ul class="nav-subitem">
           <li><a href="pages/why_we_must_solve_ctfs.html">Зачем решать цтф?</a></li>
-          <li><a href="pages/where_find_ctfs.html">Зачем решать цтф?</a></li>
+          <li><a href="pages/where_find_ctfs.html">Где искать ctf?</a></li>
           <li><a href="pages/ctf_teams.html">Ctf команды(можно подписаться на каждую и следить за материалами,
               мероприятиями,
               райтапами)</a></li>
